# docsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  PULL_REQUEST_TEMPLATE.md  README-ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  usage.md
examples/: example_module.py  example_output.md
src/docsmith/: __init__.py  __main__.py  cli.py  docstring.py  formatter.py  parser.py  template.py
src/templates/: default.j2
tests/: test_cli.py  test_docstring.py  test_formatter.py  test_parser.py
